Fixing deprecated issues, updating plugins and platform version. (#1413)